--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.17",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^7.2.0",
     "morgan": "^1.10.0",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/morgan": "^1.9.4",
     "@types/node": "^20.1.1",
+    "@types/validator": "^13.7.17",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1"
   }
