--- a/package.json
+++ b/package.json
@@ -16,18 +16,26 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^6.7.0",
+    "helmet": "^7.0.0",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.0",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.3",
     "slugify": "^1.6.6",
     "typescript": "^5.0.4",
-    "validator": "^13.9.0"
+    "validator": "^13.9.0",
+    "xss-clean": "^0.1.4"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/hpp": "^0.2.2",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/morgan": "^1.9.4",
     "@types/node": "^20.1.1",
+    "@types/nodemailer": "^6.4.8",
     "@types/validator": "^13.7.17",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1"
